# cxxmetrics

./: CMakeLists.txt  Makefile  Readme.md  example.cpp  metrics.h  metrics.hpp  ticker.h
examples/: CMakeLists.txt  example.cpp
include/cxxmetrics/: macro.h  metrics.h  ticker.h
src/: metrics.cpp
test/: CMakeLists.txt  test.cpp
